--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel='stylesheet' href='css/style.css'>
 
-  <title>SabzLearn | Js | 166</title>
+  <title>note app</title>
 </head>
 
 <body>
