--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- INPUT -->
     <section id="home">
       <div class="container">
-        <div class="header upper">SabzLearn Note App</div>
+        <div class="header upper">First Note App</div>
     
         <br><br>
         <div class="flex row-gt-sm">
